--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TestViewModel</string>
+    <string name="increment">INCREMENT</string>
+    <string name="value_count">0</string>
 </resources>
